# PyTorch-Training-Resnet50

./: CMakeLists.txt  Old_load_and_test.py  Old_load_train.py  Old_train.py  README.md  equal_files.py  imagenet2.cpp  imagenet2_crop_to_680x684.cpp  imagenet2_new_folder_event.cpp  imagenet2_only_2_folders.cpp  imagenet3.cpp  imagenet3_old.cpp  imagenet4.cpp  labels.txt  load_and_test.py  load_test_export.py  load_train.py  model_28.pt.gz.part-ae  model_31.pt.gz.part-ae  restart_app.sh  start.sh  start_rtp.sh  start_rtp_3.sh  start_rtp_3_model_31.sh  start_script.sh  test2.py  train.py
Arduino_servo/kattlucka/: kattlucka.ino
data/: count_files.py  equal_files.py
logg/: Files over SSH  Zip and Unzip split cat model_28.txt
model_29/: model_29.pt.gz.part-ae
model_34/: model_34.pt.gz.part-ae
model_35/: model_35.pt.gz.part-ae
model_37/: model_37.pt.gz.part-ae
model_38/: model_38.pt.gz.part-ae
temp/: CMakeLists.txt  imagenet3.cpp  imagenet_streaming.cpp  socket_server.cpp  socket_server.h  start_d.sh
